--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,5 +14,7 @@ add_executable(
     src/images_functions/getFileInfo.cpp
     src/images_functions/new_file.cpp
     src/images_functions/copy_part.cpp
+    src/images_functions/mirror.cpp
+    src/images_functions/split.cpp
     src/images_functions/parsing_functions.cpp
 )
