Вроде работает даже

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable(
     src/input_functions/check_args_amount.cpp
     src/input_functions/validate_args.cpp
     src/input_functions/process_flags.cpp
+    src/input_functions/flag_utils.cpp
     src/images_functions/imageStructs.h
     src/images_functions/color_replace.cpp
     src/images_functions/getFileInfo.cpp
